--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "eslint": "^5.3.0",
     "jest": "^23.2.0",
     "jest-react-native": "^18.0.0",
     "react-test-renderer": "16.3.1"
@@ -18,7 +19,9 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "native-base": "^2.7.2",
     "react": "16.3.1",
-    "react-native": "~0.55.2"
+    "react-native": "~0.55.2",
+    "react-navigation": "^2.11.2"
   }
 }
