--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.2",
     "native-base": "^2.7.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-icons": "^0.7.1",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.11.2"
   }
 }
